<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>ret</artifactId>
        <groupId>de.atextor.ret</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>ret-cli</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <skip.maven.surefire>false</skip.maven.surefire>
        <skip.maven.shade>false</skip.maven.shade>
        <skip.native.build>false</skip.native.build>
        <regular-jar>${project.artifactId}-${project.version}</regular-jar>
        <native-image-jar>${project.artifactId}-${project.version}-for-native</native-image-jar>
        <main-class>de.atextor.ret.cli.Ret</main-class>
        <binary-name>ret</binary-name>
    </properties>

    <dependencies>
        <!-- Module dependencies -->
        <dependency>
            <groupId>de.atextor.ret</groupId>
            <artifactId>ret-core</artifactId>
        </dependency>
        <dependency>
            <groupId>de.atextor.ret</groupId>
            <artifactId>ret-diagram-owl</artifactId>
        </dependency>
        <dependency>
            <groupId>de.atextor.ret</groupId>
            <artifactId>ret-infer</artifactId>
        </dependency>
        <dependency>
            <groupId>de.atextor.ret</groupId>
            <artifactId>ret-write</artifactId>
        </dependency>

        <!-- General dependencies -->
        <dependency>
            <groupId>com.github.ben-manes.caffeine</groupId>
            <artifactId>caffeine</artifactId>
        </dependency>
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
        </dependency>
        <dependency>
            <groupId>info.picocli</groupId>
            <artifactId>picocli</artifactId>
        </dependency>
        <dependency>
            <groupId>de.atextor</groupId>
            <artifactId>turtle-formatter</artifactId>
        </dependency>

        <!-- Compile time only dependencies -->
        <dependency>
            <groupId>org.graalvm.nativeimage</groupId>
            <artifactId>svm</artifactId>
        </dependency>

        <!-- Test dependencies -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.github.classgraph</groupId>
            <artifactId>classgraph</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin-version}</version>
                <configuration>
                    <annotationProcessorPaths combine.children="append">
                        <path>
                            <groupId>info.picocli</groupId>
                            <artifactId>picocli-codegen</artifactId>
                            <version>${picocli-version}</version>
                        </path>
                    </annotationProcessorPaths>
                    <compilerArgs>
                        <arg>-Aproject=${project.groupId}/${project.artifactId}</arg>
                        <arg>--add-exports</arg>
                        <arg>java.desktop/sun.awt=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>java.desktop/sun.font=ALL-UNNAMED</arg>
                    </compilerArgs>
                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <forkCount>1</forkCount>
                    <reuseForks>false</reuseForks>
                    <skip>${skip.maven.surefire}</skip>
                    <includes>
                        <include>**/RetTest.java</include>
                    </includes>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>integration-test</phase>
                        <goals>
                            <goal>integration-test</goal>
                        </goals>
                        <configuration>
                            <systemPropertyVariables>
                                <executableJar>${project.build.directory}/${project.artifactId}-${project.version}.jar
                                </executableJar>
                                <binary>${project.build.directory}/${binary-name}</binary>
                            </systemPropertyVariables>
                            <forkCount>1</forkCount>
                            <reuseForks>true</reuseForks>
                            <includes>
                                <include>**/ExecutableJarTest.java</include>
                                <include>**/BinaryTest.java</include>
                            </includes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <executions>
                    <execution>
                        <id>shade-for-native-image</id>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <finalName>${native-image-jar}</finalName>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <skip>${skip.maven.shade}</skip>
                            <transformers>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <manifestEntries>
                                        <Main-Class>${main-class}</Main-Class>
                                    </manifestEntries>
                                </transformer>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                            </transformers>
                            <artifactSet>
                                <excludes>
                                    <!-- GraalVM SDK classes & friends must not be used at runtime -->
                                    <exclude>org.graalvm.sdk:graal-sdk</exclude>
                                    <exclude>org.graalvm.nativeimage:svm</exclude>
                                    <exclude>org.graalvm.truffle:truffle-api</exclude>
                                    <exclude>org.graalvm.nativeimage:native-image-base</exclude>
                                    <exclude>org.graalvm.nativeimage:pointsto</exclude>
                                    <exclude>org.graalvm.nativeimage:objectfile</exclude>
                                    <exclude>org.graalvm.compiler:compiler</exclude>

                                    <!-- OWL API components that contain identical classes to the ones -->
                                    <!-- already given in owlapi-distribution -->
                                    <exclude>net.sourceforge.owlapi:owlapi-api</exclude>
                                    <exclude>net.sourceforge.owlapi:owlapi-apibinding</exclude>
                                    <exclude>net.sourceforge.owlapi:owlapi-compatibility</exclude>
                                    <exclude>net.sourceforge.owlapi:owlapi-impl</exclude>
                                    <exclude>net.sourceforge.owlapi:owlapi-parsers</exclude>
                                    <exclude>net.sourceforge.owlapi:owlapi-oboformat</exclude>
                                    <exclude>net.sourceforge.owlapi:owlapi-rio</exclude>
                                    <exclude>net.sourceforge.owlapi:owlapi-tools</exclude>
                                </excludes>
                            </artifactSet>
                            <filters>
                                <!-- Required to prevent overlapping resources -->
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>module-info.class</exclude>
                                        <exclude>META-INF/*</exclude>
                                        <exclude>META-INF/sisu/javax.inject.Named</exclude>
                                        <exclude>META-INF/plexus/components.xml</exclude>
                                        <exclude>META-INF.versions*/**</exclude>
                                        <exclude>META-INF/versions*/**</exclude>
                                        <exclude>META-INF/maven/**</exclude>
                                        <exclude>plugin.xml</exclude>
                                        <exclude>about.html</exclude>
                                    </excludes>
                                </filter>
                                <!-- Required to override the excludes above -->
                                <filter>
                                    <artifact>${project.groupId}:${project.artifactId}</artifact>
                                    <excludeDefaults>false</excludeDefaults>
                                    <includes>
                                        <include>**</include>
                                        <include>META-INF/**</include>
                                        <include>git.properties</include>
                                    </includes>
                                    <excludes>
                                        <!-- Explicitly exclude build-time-only code from jar -->
                                        <exclude>de/atextor/ret/core/buildtime/**</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                    <execution>
                        <id>default-shade</id>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <finalName>${regular-jar}</finalName>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <skip>${skip.maven.shade}</skip>
                            <transformers>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <manifestEntries>
                                        <Main-Class>${main-class}</Main-Class>
                                    </manifestEntries>
                                </transformer>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                            </transformers>
                            <artifactSet>
                                <excludes>
                                    <!-- OWL API components that contain identical classes to the ones -->
                                    <!-- already given in owlapi-distribution -->
                                    <exclude>net.sourceforge.owlapi:owlapi-api</exclude>
                                    <exclude>net.sourceforge.owlapi:owlapi-apibinding</exclude>
                                    <exclude>net.sourceforge.owlapi:owlapi-compatibility</exclude>
                                    <exclude>net.sourceforge.owlapi:owlapi-impl</exclude>
                                    <exclude>net.sourceforge.owlapi:owlapi-parsers</exclude>
                                    <exclude>net.sourceforge.owlapi:owlapi-oboformat</exclude>
                                    <exclude>net.sourceforge.owlapi:owlapi-rio</exclude>
                                    <exclude>net.sourceforge.owlapi:owlapi-tools</exclude>
                                </excludes>
                            </artifactSet>
                            <filters>
                                <!-- Required to prevent overlapping resources -->
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>module-info.class</exclude>
                                        <exclude>META-INF/*</exclude>
                                        <exclude>META-INF/sisu/javax.inject.Named</exclude>
                                        <exclude>META-INF/plexus/components.xml</exclude>
                                        <exclude>META-INF.versions*/**</exclude>
                                        <exclude>META-INF/versions*/**</exclude>
                                        <exclude>META-INF/maven/**</exclude>
                                        <exclude>plugin.xml</exclude>
                                        <exclude>about.html</exclude>
                                    </excludes>
                                </filter>
                                <!-- Required to override the excludes above -->
                                <filter>
                                    <artifact>${project.groupId}:${project.artifactId}</artifact>
                                    <excludeDefaults>false</excludeDefaults>
                                    <includes>
                                        <include>**</include>
                                        <include>META-INF/**</include>
                                        <include>git.properties</include>
                                    </includes>
                                    <excludes>
                                        <!-- Explicitly exclude build-time-only code from jar -->
                                        <exclude>de/atextor/ret/core/buildtime/**</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

    <profiles>
        <profile>
            <id>native</id>
            <properties>
                <skip.maven.surefire>true</skip.maven.surefire>
                <maven.resources.skip>true</maven.resources.skip>
            </properties>

            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>${native-maven-plugin-version}</version>
                        <extensions>true</extensions>
                        <executions>
                            <execution>
                                <id>build-native</id>
                                <goals>
                                    <goal>compile</goal>
                                </goals>
                                <phase>pre-integration-test</phase>
                            </execution>
                        </executions>
                        <configuration>
                            <mainClass>${main-class}</mainClass>
                            <imageName>${binary-name}</imageName>
                            <skipNativeBuild>${skip.native.build}</skipNativeBuild>
                            <skipNativeTests>true</skipNativeTests>
                            <buildArgs>
                                <arg>-J-XX:MaxRAMPercentage=90.0</arg>
                                <arg>-J-XX:GCTimeRatio=19</arg>
                                <arg>-J--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
                                <arg>-J--add-exports=java.desktop/sun.font=ALL-UNNAMED</arg>
                            </buildArgs>
                            <quickBuild>true</quickBuild>
                            <classpath>
                                <param>${project.build.directory}/${native-image-jar}.jar</param>
                            </classpath>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>